2008-01-09  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	  Remove old coverage target in favour of "make lcov".

2008-01-09  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_perform_seek),
	(gst_base_src_loop):
	The start segment for reverse playback goes from start to last_stop.

2008-01-09  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Peter Kjellerstedt <pkj axis com>

	* gst/gstclock.h:
	Cast the results from the timeval/spec_to_time macros to what the
	docs say it casts to, a GstClockTime. fixes #508175.

2008-01-09  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstbuffer.c:
	Update some comments.

	* tools/gst-inspect.c: (print_element_properties_info):
	Improve printing of flags.

2008-01-08  Tim-Philipp Müller  <tim at centricular dot net>

	* libs/gst/base/gstbasetransform.c:
	  (gst_base_transform_transform_size):
	  Print element name with g_warning() if there's a problem
	  with the unit size.

2008-01-07  David Schleef  <ds@schleef.org>

	Patch by: Damien Lespiau <damien.lespiau@gmail.com>

	* libs/gst/controller/gstcontroller.h:
	* libs/gst/controller/gstcontrolsource.h:
	* libs/gst/controller/gstinterpolationcontrolsource.h:
	* libs/gst/controller/gstlfocontrolsource.h:
	* libs/gst/dataprotocol/dataprotocol.h:
	  Fix empty prototypes.  Fixes bug #507957.

2008-01-07  David Schleef  <ds@schleef.org>

	* docs/faq/dependencies.xml: Fix typo.

2008-01-07  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_default_do_seek),
	(gst_base_src_loop):
	Don't update the last_stop position in do_seek, that's the position we
	did a seek to.
	Read backwards when we have a negative rate.

	* tests/check/elements/filesrc.c: (event_func), (wait_eos),
	(setup_filesrc), (cleanup_filesrc), (GST_START_TEST),
	(filesrc_suite):
	Add check for reverse reading.

2008-01-07  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Alexis Ballier <aballier at gentoo org>
